@startuml

title __RECNPLAY's Class Diagram__\n

  namespace nz.ac.vuw.ecs.swen225.gp20.recnplay {
    class nz.ac.vuw.ecs.swen225.gp20.recnplay.Playback {
        ~ isDone : boolean
        ~ pause : boolean
        ~ running : boolean
        ~ step : boolean
        - speed : double
        + getCurrentSpeed()
        + isDone()
        + isPaused()
        + isRunning()
        + isStep()
        + load()
        + markDone()
        + pause()
        + play()
        + resume()
        + setReplaySpeed()
        + step()
        - parseJson()
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.recnplay {
    class nz.ac.vuw.ecs.swen225.gp20.recnplay.Replay {
        ~ endTime : long
        ~ levelHistory : ArrayList<Level>
        ~ levelName : String
        ~ startTime : long
        + Replay()
        + Replay()
        + addAction()
        + levelUp()
        + saveReplay()
    }
  }
  

  namespace nz.ac.vuw.ecs.swen225.gp20.recnplay {
    class nz.ac.vuw.ecs.swen225.gp20.recnplay.TestCases {
        + testParse()
        + testSave01()
    }
  }
  

  nz.ac.vuw.ecs.swen225.gp20.recnplay.Playback o-- nz.ac.vuw.ecs.swen225.gp20.recnplay.elements.Node : baseNode
  nz.ac.vuw.ecs.swen225.gp20.recnplay.Playback o-- nz.ac.vuw.ecs.swen225.gp20.recnplay.threads.Dispatch : dispatchThread
  nz.ac.vuw.ecs.swen225.gp20.recnplay.Replay o-- nz.ac.vuw.ecs.swen225.gp20.recnplay.elements.Level : currentLevel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
